# PostEventSummary

./: README.md  architecture.md  pyproject.toml  requirements.py36.txt  requirements.txt
params/: PostEventSummaryProperties.cfg  city_list_A.txt  city_list_B.txt  city_populations_CA_PNW.csv
templates/: EventSummary_a.html.j2
test/: conftest.py  test_end2end.py  test_modules.py
test/test_files/: 20200911_M4.2_lonepine.json  20201001_M4.9_westmorland.json  20230101_M5.5.json  Ferndale_M6.4.json  SYN_SaltonSea_M7.8_contour.json  SanSimeon.json  WEA_no_anss.json  WEA_sent.json  event_1635.json  peak_mag_no_anss.json  peak_mag_w_anss.json  rounding_test.json
test/test_files/xml/: 1994_Northridge_M6.7_contour_AND_grid.xml  SAMessageExample.xml  SA_LaVerneEvent08282018.xml  SYN_SaltonSea_M7.8_53_contour.xml
